--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
+    "react-loader-spinner": "^3.1.4",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-spinners": "^0.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
