--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "eslint-plugin-react": "^7.14.3",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.15",
+    "node-sass": "^4.12.0",
+    "noty": "3.1.4",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
